Thêm ObserverPattern, chuyển sang Java Socket, chỉnh sửa các file dựa trên các nguyên tắc (Code smell, SOLID)